--- a/Subdomains/countdown.jwsoat.com/index.html
+++ b/Subdomains/countdown.jwsoat.com/index.html
@@ -1,5 +1,6 @@
 <script src="https://cdn.logwork.com/widget/countdown.js"></script>
 <a href="https://logwork.com/countdown-ryfr" class="countdown-timer" data-timezone="Pacific/Auckland" data-date="2021-11-05 00:00">Forza Horizon 5</a>
-
+<script src="https://cdn.logwork.com/widget/countdown.js"></script>
+<a href="https://logwork.com/countdown-ryga" class="countdown-timer" data-timezone="Pacific/Auckland" data-date="2021-11-05 07:00">Countdown Bricks Promotion</a>
 <script src="https://cdn.logwork.com/widget/countdown.js"></script>
 <a href="https://logwork.com/countdown-ryf7" class="countdown-timer" data-timezone="Pacific/Auckland" data-date="2021-11-15 00:00">New Job</a>
